# MemonFoundation-Backend

./: Dockerfile  docker-compose.yml  package-lock.json  package.json  readme.md
.github/workflows/: cd.yml  ci.yml
agent/: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
agent/app/: __init__.py
agent/app/core/: agent_manager.py  note_manager.py
agent/app/models/: models.py
agent/app/utils/: agent_utils.py  note_utils.py  utils.py
agent/tests/: __init__.py  sample_notes.txt  test_api_endpoints.py
api/: index.js
src/: index.js
src/config/: database.js
src/controllers/: documents.controller.js  uploadController.js  userController.js
src/helper/: fileUpload.js  s3.js
src/middlewares/: verification.js
src/models/: Document.js  SentEmail.js  Tenant.js  User.js
src/routes/: documentType.Route.js  documents.Route.js  tenantRoute.js  uploadRoutes.js  userRoute.js
src/services/: authService.js  document.service.js  documentType.service.js  mailerService.js  tenantService.js  uploadService.js  userService.js
