[project]
name = "agent"
version = "0.1.0"
description = "Tutor agent for note embedding and modal paper generation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain",
    "langgraph",
    "openai",
    "python-dotenv",
    "pydantic",
    "langchain-openai",
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    "langchain-community>=0.3.28",
    "pytest>=8.4.1",
    "llama-index-vector-stores-chroma>=0.1.10",
    "llama-index>=0.10.45.post1",
    "chromadb>=0.4.24",
]
